# production-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd.yaml
src/rag/: main.py
src/rag/api/: routes.py
src/rag/core/: config.py  startup.py
src/rag/models/: schemas.py
src/rag/services/: chunking.py  embeddings.py  generation.py  pdf.py  retrieval.py
src/rag/storage/: faiss_store.py
